src/app/pages/form/simple-form/simple-form.component.scss
.form {
  tds-block {
    transition: filter 250ms ease;
  }

  .spinner-container {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    bottom: 110px;
    z-index: 1;
    opacity: 0;
    transition: opacity 200ms ease;
  }

  &.form-sending {
    tds-block {
      filter: blur(4px);
    }
    .spinner-container {
      opacity: 1;
    }
  }
}

